--- a/src/pages/UserStats.css
+++ b/src/pages/UserStats.css
@@ -1,18 +1,21 @@
 @import '../theme.css';
 
 .user-stats-page {
-  width: 70vw;
-  height: 70vh;
+  position: relative;
+  width: 72vw;
+  height: 75vh;
+  overflow: auto;
   -webkit-user-select: none; /* Safari */
   -moz-user-select: none;    /* Firefox */
   -ms-user-select: none;     /* IE10+/Edge */
   user-select: none;
+  background-color: var(--bg-color);
 }
 
-.generated-container {
-  position: relative;
+.generated-container {  /* contains the generated png */
   background-color: var(--bg-color);
-  padding: 1rem;
+  width: 100%;
+  height: 100%;
 }
 
 .user-stats-page img {
@@ -207,7 +210,7 @@
 }
 
 .generate-button-wrapper {
-  position: absolute;
+  position: fixed;
   right: 20px;
   bottom: 16px;
   margin-top: 2rem;
